style(form): fix text wrap

--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -199,9 +199,10 @@
     &__slider-text-wrap {
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-start;
         margin-bottom: 5px;
         padding-top: 3px;
+        gap: 10px;
     }
 
     &__slider-text,
@@ -214,6 +215,10 @@
         @media (max-width: $lg) {
             font-size: 16px;
         }
+    }
+
+    &__slider-value {
+        flex-shrink: 0;
     }
 
     &__file-input {
